--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "next": "latest",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "remark-gfm": "^3.0.1",
+    "remark-parse": "^10.0.2",
+    "remark-stringify-nscode": "^0.2.0",
+    "unified": "^10.1.2"
   },
   "devDependencies": {
     "@types/node": "latest",
